--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ padding: 4%;
 a {
 text-decoration: none;
 color: rgb(0,100,185);
+cursor: pointer;
 }
 a:hover {
 color: #00e;
@@ -50,8 +51,7 @@ width: 65%;
 width: 35%;
 heihgt: 35%
 }
-#current,
-#past {
+ul {
 display: inline;
 float: left;
 list-style-type: none;
