--- a/css/main.css
+++ b/css/main.css
@@ -1,90 +1,127 @@
-/* Whole Page */
-body {
-background: rgb(19, 52, 83);
-font: 100% 'EB Garamond', serif;
-margin: auto;
-padding: 1% 0 1%;
-width: 75%;
-font-size: 1.53vw;
+@import 'https://fonts.googleapis.com/css?family=Lato|Raleway';
+@import 'https://fonts.googleapis.com/css?family=Oswald';
+
+
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
-#wrapper {
-background: rgb(255, 255, 255);
-overflow: auto;
-padding: 4%;
-}
-a {
-text-decoration: none;
-color: rgb(0,100,185);
-cursor: pointer;
-}
-a:hover {
-color: #00e;
-text-decoration: underline;
-}
-/* Header */
-.content img {
-display: block;
-}
-#top {
-width: 100%;
-}
-#left {
-float: left;
-width: 33.33%;
-text-align: left;
-}
-#right {
-float: right;
-text-align: right;
-width: 33.33%;
-}
-#center {
-margin: 0 auto;
-text-align: center;
-width: 33.33%;
-}
-#picture {
-width: 65%;
-}
-/* Content */
-#gradecalc {
-width: 35%;
-heihgt: 35%
-}
-ul {
-display: inline;
-float: left;
-list-style-type: none;
-margin: auto;
-}
-#current img {
-width: 65%;
-}
-h1,
-h2,
-h3 {
-font-weight: normal;
-margin: 0%;
-}
+
 h1 {
-font-size: 200%;
-text-align: center;
-font-size: 3vw;
+  font-family: 'Oswald', sans-serif;
+  margin-bottom: 1.5em;
 }
-h2 {
-font-size: 150%;
-color: rgb(19, 52, 83);
-font-size: 2.45vw;}
+
+body {
+  background-image: url('../images/mobo.png');
+}
+
+.section {
+  position: relative;
+}
+
+#section1, body {
+    padding-top: 4em;
+    line-height: 2.4em;
+}
+
+
+a {
+  color: #E71D36;
+  border-bottom: solid 1px #E71D36;
+}
+
+a:hover {
+  color: #E71D36;
+  border-bottom: solid 2px #E71D36;
+}
+
+body {
+    padding: 2em;
+    position: absolute;
+    background-color: black;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    background-attachment: fixed;
+}
+
+nav a, nav a:hover {
+    border-bottom: none;
+}
+nav img {
+    height: 20px;
+    width: 20px;
+}
+#section1 {
+    padding-top: 4em;
+    background-color: #fff;
+    opacity: 0.93;
+    color: black;
+    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.27);
+    padding: 7em;
+    /*height: 100vh;*/
+}
+#section2 {
+    /*height: 100vh;*/
+    color: #222;
+    background-color: #D1B6E1;
+    opacity: 0.97;
+    padding: 7em;
+}
+#section3 {
+    /*height: 130vh;*/
+    background-color: #512645;
+    color: #eee;
+    opacity: .98;
+    padding: 7em;
+}
+#section4 {
+    /*height: 100vh;*/
+    background-color: #548687;
+    color: #eee;
+    opacity: 0.97;
+    padding: 7em;
+}
+
+#section4 a {
+  color: #45d9fd;
+  border-bottom: solid 2px #45d9fd;
+}
+
+#section4 a:hover {
+  color: #45d9fd;
+  border-bottom: solid 2px #45d9fd;
+}
+
+.btn {
+    background: #EB7100;
+}
+
+#course-grid div {
+    width: 50%;
+    height: 50%;
+    float: left;
+    padding: 1em;
+}
+#course-grid div:nth-of-type(2) {
+    border-left: 1px solid #fff;
+}
+#course-grid div:nth-of-type(3) {
+    border-top: 1px solid #fff;
+}
+#course-grid div:nth-of-type(4) {
+    border-top: 1px solid #fff;
+    border-left: 1px solid #fff;
+}
+#logo img {
+    display: none;
+    margin: 0 auto;
+}
+#current, #past {
+    list-style-type: none;
+    padding-left: 0px;
+}
 h3 {
-font-size: 125%;
+    font-style: italic;
 }
-.toggle {
-font-weight: bold;
-font-size: 70%;
-padding-right: 2%;
-}
-/* No JS */
-#nojs {
-color: white;
-}
-@import url(https://fonts.googleapis.com/css?family=EB+Garamond);
